--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,14 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
+    background: url('image.png') no-repeat center center fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 header {
@@ -20,7 +24,7 @@ header {
 .container {
     display: flex;
     width: 90%;
-    max-width: 1200px;
+    max-width: 1400px;
     margin-top: 20px;
 }
 
@@ -29,14 +33,16 @@ header {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     flex: 3;
+    background: rgb(182, 255, 0);
+    padding: 16px;
+    border-radius: 4px;
 }
 
 .game {
     background: white;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 4px;
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .sidebar {
@@ -46,12 +52,11 @@ header {
     margin-left: 20px;
     border-radius: 10px;
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .sidebar img {
-    width: 100px;
-    height: 100px;
+    width: 256px;
+    height: 256px;
     border-radius: 50%;
     margin-bottom: 10px;
 }
