--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ header {
     align-items: center;
 }
 
+    .text-column a {
+        font-family: 'Courier New', 'Courier New', monospace;
+    }
+
 .text-column a:link {
     color: darkgray
 }
